# astra-leo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  session.tmux
cmake/: warnings.cmake
cmake/dependencies/: freertos_trace.cmake  libparam.cmake  libparam.h.in
cmake/toolchains/: arm-none-eabi.cmake
csh/: README.md  astra-leo.csh  config.csh  init.csh
gdb/: ATSAMV71Q21B.svd  gdb-svd.py  jlink.gdb  openocd.gdb
include/: param_config.h  sys_error.h
include/app/: app.h  app_config.h  data_handler.h  readout.h  telemetry_and_control.h
include/drivers/: siphra.h
include/interface/: aldp.h
include/trace_config/: trcKernelPortConfig.h
include/trace_config/ringbuffer/: trcStreamPortConfig.h
src/app/: CMakeLists.txt  app_main.c  data_handler.c  hooks.c  readout.c  telemetry_and_control.c
src/asf4/config/: hpl_gmac_config.h  hpl_pio_config.h  ieee8023_mii_standard_config.h  peripheral_clk_config.h
src/asf4/ethernet_phy/: ksz8061rnb.h
src/asf4/samv71b/include/: samv71q21b.h
src/drivers/simulation/: siphra.c
src/examples/: CMakeLists.txt  server_client_example.c
src/param/: CMakeLists.txt  csp_debug_param.c  params.c  siphra_params.c
src/platform/: CMakeLists.txt
src/platform/posix/: CMakeLists.txt  eth_linux.c  main.c  trace_timer.c
src/platform/posix/config/: FreeRTOSConfig.h  trcConfig.h
src/platform/samv71q21b/: CMakeLists.txt  csp_eth_sam.c  csp_eth_sam.h  fault_handlers.c  initialization.c  initialization.h  main.c  pins.h
src/platform/samv71q21b/config/: FreeRTOSConfig.h  trcConfig.h
src/platform/samv71q21b/linker/: samv71q21b_flash.ld  samv71q21b_sram.ld
src/platform/samv71q21b/shim/: endian.h
tools/: CMakeLists.txt  dummy_payload_controller.c  prepare_eth_iface.sh
